# code-intelligence-rag

./: .env.example  .gitignore  README.md  api.py  app.py  ingest.py  pyproject.toml
src/: __init__.py  config.py
src/generation/: __init__.py  generator.py
src/ingestion/: __init__.py  chunker.py  embedder.py  loader.py
src/retrieval/: __init__.py  retriever.py  vector_store.py
