[project]
name = "code-intelligence"
version = "0.1.0"
description = "RAG system that understands codebases and answers questions about architecture, features, and code flow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.0",
    "openai>=1.30.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
